tests/baselines/reference/parserMemberVariableDeclaration3.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration3.ts(2,10): error TS1029: 'public' modifier must precede 'static' modifier.


==== tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration3.ts (1 errors) ====
    class C {
      static public Foo;
             ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }